<resources>
    <string name="app_name">SushiKey</string>
    <string name="txt_enter">Masuk</string>
    <string name="txt_username">Username</string>
    <string name="example_username">achmad_muchlasin</string>
    <string name="txt_password">Password</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="logo_sushi_key">Logo Sushi Key</string>
    <string name="title_nav_dashboard">Dashboard</string>
    <string name="title_nav_location">Lokasi</string>
    <string name="title_nav_menu">Menu</string>
    <string name="title_nav_staff">Pegawai</string>
    <string name="title_nav_report">Laporan</string>
    <string name="title_nav_logout">Keluar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="analytics">Analytics</string>
    <string name="example_total">Rp. 200.000</string>
    <string name="example_text_income">Pendapatan Bulan ini</string>
    <string name="icon_income">icon Income</string>
    <string name="menu_favorite">Menu Favorite</string>
    <string name="manage_menu">Kelola Menu</string>
    <string name="add">Tambah</string>
    <string name="filter">Filter</string>
    <string name="icon_description">Icon Description</string>
    <string name="no">No</string>
    <string name="name_resto">Nama Resto</string>
    <string name="number_telephone">Nomor Telephone</string>
    <string name="action">Aksi</string>
    <string name="example_resto">SushiKey</string>
    <string name="number_one">1</string>
    <string name="example_number_phone">0878612120</string>
    <string name="edit">Edit</string>
    <string name="delete">Hapus</string>
    <string name="add_location">Tambah Lokasi</string>
    <string name="example_name_resto">contoh : SushiKey</string>
    <string name="example_number_telephone">contoh : 08786890000</string>
    <string name="search">Cari...</string>
    <string name="manage_location">Kelola Lokasi</string>
    <string name="no_menu">Nomor Menu</string>
    <string name="name_menu">Nama Menu</string>
    <string name="qty">Qty</string>
    <string name="composition">Komposisi</string>
    <string name="price">Harga</string>
    <string name="image">Gambar</string>
    <string name="example_category">Makanan</string>
    <string name="example_food">Sushi</string>
    <string name="example_composition">Ikan Dori\nRumput Laut\nUdang</string>
    <string name="example_qty">100000</string>
    <string name="example_price">Rp. 1.000.000</string>
    <string name="example_price_pl">Rp. 10.000</string>
    <string name="image_menu">Gambar Product</string>
    <string name="manage_staff">Kelola Pegawai</string>
    <string name="cancel">Batal</string>
    <string name="icon_staff">icon staff</string>
    <string name="example_name_staff">Achmad muchlasin</string>
    <string name="example_email_staff">achmadmuchlas@gmail.com</string>
    <string name="example_email">contoh : achmadmuchlas@gmail.com</string>
    <string name="example_role_staff">Chasier</string>
    <string name="icon_left">icon left</string>
    <string name="manage_report">Kelola Laporan</string>
    <string name="order_date">Tgl pesanan</string>
    <string name="order_number">No pesanan</string>
    <string name="total_order">Total</string>
    <string name="detail_order">Detail</string>
    <string name="example_date">19 Januari 2024</string>
    <string name="example_order_number">ORD_16812681926</string>
    <string name="add_menu">Tambah Menu</string>
    <string name="example_no_menu">Contoh : 01</string>
    <string name="example_name_menu">Tuna Sushi Ayam Muda</string>
    <string name="example_name_menu3">Burger Chanathip ashaishdiahsdi</string>
    <string name="quota_menu">Kuota Menu</string>
    <string name="image_product_menu">image product menu</string>
    <string name="add_staff">Tambah Pegawai</string>
    <string name="email">Email</string>
    <string name="role">Role</string>
    <string name="icon_profit">icon profit</string>
    <string name="example_total_sales">200 Total Sale</string>
    <string name="button_back">icon button back</string>
    <string name="information_order">Information pesanan</string>
    <string name="item_order">Item Pesanan</string>
    <string name="order_quantity">Jumlah Pesanan</string>
    <string name="quantity">Qty</string>
    <string name="pay">Bayar</string>
    <string name="note">Note</string>
    <string name="example_note">- Tidak Pedas,Tidak pakai Saos, Tidak pakai timun,Tidak pakai sayur</string>
    <string name="example_location">SushiKey</string>
    <string name="select_location">pilih lokasi</string>
    <string name="save">Simpan</string>
    <string name="title_nav_super_admin_dashboard">Beranda</string>
    <string name="title_nav_super_admin_location">Lokasi</string>
    <string name="title_nav_super_admin_report">Laporan</string>
    <string name="title_nav_super_admin_logout">Keluar</string>
    <string name="title_nav_super_admin_manage_admin">Pegawai</string>
    <string name="txtName">Nama</string>
    <string name="example_full_name">Achmad Muchlasin</string>
    <string name="enter_password">Masukkan Password</string>
    <string name="example_role_admin">Super Admin</string>
    <string name="detail_staff">Detail Pegawai</string>
    <string name="example_password">*******</string>
    <string name="edit_profile">Ubah Profile</string>
    <string name="icon_close">Icon close</string>
    <string name="add_filter">Masukan Filter</string>
    <string name="initial_limit_date">Pilih batas awal tanggal</string>
    <string name="example_initial_limit_date">14 Januari 2023</string>
    <string name="deadline">Pilih batas tanggal akhir</string>
    <string name="txt_ingredients">Ingredients</string>
    <string name="example_ingredient">all</string>
    <string name="back">Kembali</string>
    <string name="manage_category">Kelola Kategori</string>
    <string name="id_category">ID Kategori</string>
    <string name="name_categori">Nama Kategori</string>
    <string name="example_id_category">SS_01</string>
    <string name="title_nav_admin_category">Kategori</string>
    <string name="title_nav_admin_dashboard">Beranda</string>
    <string name="title_nav_admin_menu">Menu</string>
    <string name="title_nav_admin_staff">Pegawai</string>
    <string name="title_nav_admin_report">Laporan</string>
    <string name="title_nav_admin_logout">Keluar</string>
    <string name="add_category">Tambah Kategori</string>
    <string name="topping">Topping</string>
    <string name="example_topping">contoh: Tambah Sayur</string>
    <string name="add_topping">Tambah Topping</string>
    <string name="photo">Gambar</string>
    <string name="title_nav_staff_menu">Menu</string>
    <string name="title_nav_staff_cart">Keranjang</string>
    <string name="title_nav_staff_order">Pesanan</string>
    <string name="title_nav_staff_order_report">Laporan</string>
    <string name="title_nav_staff_logout">Keluar</string>
    <string name="quota">Kuota:</string>
    <string name="price_">Harga:</string>
    <string name="add_to_cart">Tambah ke Keranjang</string>
    <string name="menu_added">Tambahkan menu</string>
    <string name="add_note">Masukkan note</string>
    <string name="icon_plus">Icon Plus</string>
    <string name="payment">Pembayaran</string>
    <string name="item">Item</string>
    <string name="Qty">Qty</string>
    <string name="total_payment">Total Pembayaran</string>
    <string name="icon_cart">iconsave</string>
    <string name="name_staff">Nama</string>
    <string name="staff_name">Nama Kasir</string>
    <string name="location">Lokasi</string>
    <string name="sushikey">Sushikey</string>
    <string name="order">Order#</string>
    <string name="offline_order">Offline</string>
    <string name="input_your_username">Masukan username Anda</string>
    <string name="input_your_password">Masukan Password Anda</string>
    <string name="text_income_today">Pendapatan hari ini</string>
    <string name="text_income_this_month">Pendapatan bulan ini</string>
    <string name="sales">Penjualan</string>
    <string name="example_year">2024</string>
    <string name="location_outlet">Lokasi Outlet</string>
    <string name="total_sales">Total Penjualan</string>
    <string name="text_total_order_today">Total Order \nHari ini</string>
    <string name="text_order_offline">Orderan Offline</string>
    <string name="text_order_online">Orderan Online</string>
    <string name="text_filter">Filter</string>
    <string name="choose_optional_date">Pilih Tanggal (Optional)</string>
    <string name="input_your_optional_date">Masukan tanggal yang diinginkan!</string>
    <string name="choose_optional_month">Pilih Bulan (Optional)</string>
    <string name="input_your_optional_month">Masukan Bulan yang diinginkan!</string>
    <string name="name_outlet">Nama Outlet</string>
    <string name="text_loading">loading...</string>
    <string name="input_your_name">Masukan nama anda</string>
    <string name="input_your_phone_number">Masukan nomor telephone anda</string>
    <string name="location_admin">Lokasi kerja</string>
    <string name="input_your_location_work">Masukan lokasi kerja</string>
    <string name="edit_data">Ubah Data</string>
    <string name="save_data">Simpan Data</string>
    <string name="input_your_outlet_name">Masukan nama outlet</string>
    <string name="input_your_phone_number_outlet">Masukan nomor telephone outlet</string>
    <string name="input_your_number_menu">Masukan nomor menu</string>
    <string name="text_cancel">Batal</string>
    <string name="text_take_photo_from_camera">Ambil gambar dari kamera</string>
    <string name="text_take_photo_from_gallery">Ambil gambar dari galeri</string>
    <string name="icon_camera">Icon camera</string>
    <string name="input_your_name_menu">Masukan nama menu yang baru</string>
    <string name="add_admin">Tambah Admin</string>
    <string name="input_your_composition">Masukan komposisi dari menu</string>
    <string name="input_your_category">Masukan kategori menu</string>
    <string name="input_your_quota_menu">Masukan kuota menu</string>
    <string name="input_your_price">"Masukan harga "</string>
    <string name="input_your_topping">Masukan topping dari menu</string>
    <string name="add_your_photo_menu">Tambahkan foto menu</string>
    <string name="photo_menu">Gambar Menu</string>
    <string name="add_data">Tambah data</string>
    <string name="orders">Orders #</string>
    <string name="text_online">Online</string>
    <string name="text_offline">Offline</string>
    <string name="topping_name">Nama topping</string>
    <string name="input_topping_name">Masukan Nama Topping</string>
    <string name="topping_price">Harga topping</string>
    <string name="input_topping_price">Masukan Harga Topping</string>
    <string name="add_more_topping">Tambah Topping Lain</string>
    <string name="data_category_is_empty">Data Kategori Masih Kosong!!</string>
    <string name="data_category_is_null_or_empty">Data Kategori Tidak Ditemukan Kosong!!</string>
    <string name="text_topping_is_empty">Menu ini tidak memiliki topping</string>
    <string name="confirm_order">Konfirmasi Pesanan</string>
    <string name="text_sub_total">Sub Total</string>
    <string name="ppn">PPN</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="input_your_user_total_payment">"Masukan total pembayaran "</string>
    <string name="yes">Ya</string>
    <string name="name_buyer">Nama Pembeli</string>
    <string name="input_your_name_buyer">Masukan nama pembeli</string>
    <string name="continue_payment">Lanjutkan pembayaran</string>
    <string name="information_order_in_progress">Informasi Pesanan Yang Diproses</string>
    <string name="edit_order">Edit Pesanan</string>
    <string name="detail_orders">Detail Pesanan</string>
    <string name="order_done">Pesanan Selesai</string>
</resources>