<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_admin_dashboard"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:title="@string/title_nav_admin_dashboard" />

    <item
        android:id="@+id/nav_admin_category"
        android:enabled="true"
        android:icon="@drawable/icon_category"
        android:title="@string/title_nav_admin_category" />

    <item
        android:id="@+id/nav_admin_menu"
        android:enabled="true"
        android:icon="@drawable/icon_menu"
        android:title="@string/title_nav_admin_menu" />
    <item
        android:id="@+id/nav_admin_staff"
        android:enabled="true"
        android:icon="@drawable/icon_official"
        android:title="@string/title_nav_admin_staff" />
    <item
        android:id="@+id/nav_admin_report"
        android:enabled="true"
        android:icon="@drawable/icon_report"
        android:title="@string/title_nav_admin_report" />
    <item
        android:id="@+id/nav_admin_logout"
        android:enabled="true"
        android:icon="@drawable/icon_logout"
        android:title="@string/title_nav_admin_logout" />
</menu>