<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_super_admin_dashboard"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:title="@string/title_nav_super_admin_dashboard" />

    <item
        android:id="@+id/nav_super_admin_location"
        android:enabled="true"
        android:icon="@drawable/icon_location"
        android:title="@string/title_nav_super_admin_location" />
    <item
        android:id="@+id/nav_super_admin_manage_admin"
        android:enabled="true"
        android:icon="@drawable/icon_official"
        android:title="@string/title_nav_super_admin_manage_admin" />
    <item
        android:id="@+id/nav_super_admin_report"
        android:enabled="true"
        android:icon="@drawable/icon_report"
        android:title="@string/title_nav_super_admin_report" />
    <item
        android:id="@+id/nav_super_admin_logout"
        android:enabled="true"
        android:icon="@drawable/icon_logout"
        android:title="@string/title_nav_super_admin_logout" />
</menu>