<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feature.super_admin.manage_admin.DetailManageAdminFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginStart="29dp"
            android:contentDescription="@string/button_back"
            android:src="@drawable/icon_button_back"
            app:layout_constraintBottom_toBottomOf="@id/textHeadline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/textHeadline" />

        <TextView
            android:id="@+id/textHeadline"
            style="@style/CustomTextStyle.Headline"
            android:text="@string/detail_staff"
            app:layout_constraintStart_toEndOf="@id/buttonBack"
            app:layout_constraintTop_toTopOf="parent" />

        <!--name-->
        <TextView
            android:id="@+id/textName"
            style="@style/CustomTextStyle.Body.PopReg"
            android:layout_marginStart="36dp"
            android:layout_marginTop="30dp"
            android:text="@string/txtName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textHeadline" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardName"
            style="@style/CustomCardViewWithTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textName">

            <TextView
                android:id="@+id/textValueName"
                style="@style/CustomTextStyle.Body.PopMedium"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/example_full_name" />
        </com.google.android.material.card.MaterialCardView>
        <!--location-->
        <TextView
            android:id="@+id/textUsername"
            style="@style/CustomTextStyle.Body.PopReg"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardName" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardUsername"
            style="@style/CustomCardViewWithTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textUsername">

            <TextView
                android:id="@+id/textValueUsername"
                style="@style/CustomTextStyle.Body.PopMedium"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/example_username" />
        </com.google.android.material.card.MaterialCardView>

        <!--location-->
        <TextView
            android:id="@+id/textLocation"
            style="@style/CustomTextStyle.Body.PopReg"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_nav_super_admin_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardUsername" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardLocation"
            style="@style/CustomCardViewWithTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLocation">

            <TextView
                android:id="@+id/textValueLocation"
                style="@style/CustomTextStyle.Body.PopMedium"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/example_location" />
        </com.google.android.material.card.MaterialCardView>

        <!--location-->
        <TextView
            android:id="@+id/textPhone"
            style="@style/CustomTextStyle.Body.PopReg"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/number_telephone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardLocation" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardPhone"
            style="@style/CustomCardViewWithTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textPhone">

            <TextView
                android:id="@+id/textValuePhone"
                style="@style/CustomTextStyle.Body.PopMedium"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/example_number_phone" />
        </com.google.android.material.card.MaterialCardView>

        <!--location-->
        <TextView
            android:id="@+id/textPassword"
            style="@style/CustomTextStyle.Body.PopReg"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardPhone" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardPassword"
            style="@style/CustomCardViewWithTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textPassword">

            <TextView
                android:id="@+id/textValuePassword"
                style="@style/CustomTextStyle.Body.PopMedium"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/example_password" />
        </com.google.android.material.card.MaterialCardView>

        <!--role-->
        <TextView
            android:id="@+id/textRole"
            style="@style/CustomTextStyle.Body.PopReg"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/role"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardPassword" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardRole"
            style="@style/CustomCardViewWithTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textRole">

            <TextView
                android:id="@+id/textValueRole"
                style="@style/CustomTextStyle.Body.PopMedium"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/example_role_admin" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEdit"
            style="@style/CustomButtonStyle"
            android:layout_width="0dp"
            android:layout_marginVertical="20dp"
            android:text="@string/edit_profile"
            android:layout_marginHorizontal="60dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/cardRole"
            app:layout_constraintStart_toStartOf="@id/cardRole"
            app:layout_constraintTop_toBottomOf="@id/cardRole"
            app:layout_constraintVertical_bias="0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>