<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardImageMenu"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_menu"
            android:scaleType="centerCrop"
            android:src="@drawable/image_menu" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textNameMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        style="@style/CustomTextStyle.Body.PopSemiBold"
        android:layout_marginStart="6dp"
        app:layout_constrainedHeight="true"
        android:layout_width="0dp"
        android:maxLines="2"
        android:text="@string/example_name_menu"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/cardImageMenu"
        app:layout_constraintTop_toTopOf="@id/cardImageMenu" />

    <TextView
        android:id="@+id/textTopping"
        style="@style/CustomTextStyle.Body.PopReg.smallSp"
        android:layout_marginStart="6dp"
        android:text="@string/topping"
        android:textColor="@color/grey"
        app:layout_constraintStart_toEndOf="@id/cardImageMenu"
        app:layout_constraintTop_toBottomOf="@id/textNameMenu" />

    <TextView
        android:id="@+id/textValueTopping"
        style="@style/CustomTextStyle.Body.PopReg.smallSp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:text="@string/example_ingredient"
        android:textColor="@color/black"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/cardImageMenu"
        app:layout_constraintTop_toBottomOf="@id/textTopping" />

    <TextView
        android:id="@+id/textNote"
        style="@style/CustomTextStyle.Body.PopReg"
        android:layout_marginStart="6dp"
        android:layout_marginTop="5dp"
        android:text="@string/note"
        android:textColor="@color/grey"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/cardImageMenu"
        app:layout_constraintTop_toBottomOf="@id/textValueTopping"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textValueNote"
        style="@style/CustomTextStyle.Body.PopReg"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:text="@string/example_note"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/cardImageMenu"
        app:layout_constraintTop_toBottomOf="@id/textNote"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>