<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feature.super_admin.manage_location.AddOrUpdateLocationFragment">

    <ImageView
        android:id="@+id/buttonBack"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_marginStart="29dp"
        android:contentDescription="@string/button_back"
        android:src="@drawable/icon_button_back"
        app:layout_constraintBottom_toBottomOf="@id/textHeadline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textHeadline" />

    <TextView
        android:id="@+id/textHeadline"
        style="@style/CustomTextStyle.Headline"
        android:text="@string/add_location"
        app:layout_constraintStart_toEndOf="@id/buttonBack"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Name Resto-->
    <TextView
        android:id="@+id/textNameResto"
        style="@style/CustomTextStyle.Body.PopReg"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/name_resto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHeadline" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edlNameResto"
        android:layout_width="650dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:autofillHints="password"
        android:hint="@string/example_name_resto"
        android:textColorHint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textNameResto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNameResto"
            style="@style/CustomEditTextStyle"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Location-->
    <TextView
        android:id="@+id/textLocation"
        style="@style/CustomTextStyle.Body.PopReg"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_nav_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edlNameResto" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edlLocation"
        android:layout_width="650dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:autofillHints="password"
        android:hint="@string/location"
        android:textColorHint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLocation">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLocation"
            style="@style/CustomEditTextStyle"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Number Telephone-->
    <TextView
        android:id="@+id/textNumberTelephone"
        style="@style/CustomTextStyle.Body.PopReg"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/number_telephone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edlLocation" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edlNumberTelephone"
        android:layout_width="650dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:autofillHints="phone"
        android:hint="@string/example_number_telephone"
        android:textColorHint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textNumberTelephone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNumberTelephone"
            style="@style/CustomEditTextStyle"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAddLocation"
        style="@style/CustomButtonStyle"
        android:layout_width="0dp"
        android:layout_margin="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/add_location"
        app:layout_constraintEnd_toEndOf="@id/edlNumberTelephone"
        app:layout_constraintStart_toStartOf="@id/edlNumberTelephone"
        app:layout_constraintTop_toBottomOf="@id/edlNumberTelephone" />
</androidx.constraintlayout.widget.ConstraintLayout>